Use getFirst and addFirst